//
// Copyright 2018 Peter Vrenken.

syntax = "proto3";

import "_Model.proto";

option java_multiple_files = true;
option java_package = "EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol";
option java_outer_classname = "Ubigia";
option objc_class_prefix = "Ubigia";
option csharp_namespace = "EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol";
//option optimize_for = LITE_RUNTIME;// SPEED, CODE_SIZE, LITE_RUNTIME;

package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The Properties Grpc service definition.
service PropertiesGrpcService 
{
	// Try to authenticate.
	rpc Get (PropertiesGetRequest) returns (PropertiesGetResponse) {}
	rpc Post (PropertiesPostRequest) returns (PropertiesPostResponse) {}
}

message PropertiesGetRequest
{
	Identifier EntryId = 1;
}

message PropertiesGetResponse
{
	PropertyDictionary PropertyDictionary = 1;
}

message PropertiesPostRequest
{
	Identifier EntryId = 1;
	PropertyDictionary PropertyDictionary = 2;
}

message PropertiesPostResponse
{
}